--- a/cmd/netrotor/netrotor.service
+++ b/cmd/netrotor/netrotor.service
@@ -9,7 +9,7 @@ RestartSec=1
 StartLimitBurst=5
 StartLimitIntervalSec=10
 User=pi
-ExecStart=/home/go/src/rotor-network/gateway/gateway
+ExecStart=/home/go/src/github.com/sconklin/netrotor/cmd/netrotor/netrotor
 
 [Install]
 WantedBy=default.target
